# napi-example

./: Cargo.toml  Makefile  deny.toml  index.d.ts  index.js
algo/: Cargo.toml
algo/src/: algo.rs  matrix.rs
node-binding/: Cargo.toml  index.d.ts  index.js  package.json
node-binding/src/: algo.rs  lib.rs
